--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.PassportScanner"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         
         <activity
@@ -50,6 +51,12 @@
                 android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/nfc_tech_filter" />
         </activity>
+
+        <!-- Secret Wallet Activity -->
+        <activity
+            android:name=".wallet.WalletActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner" />
     </application>
 
 </manifest>
