feat(ui): add bottom nav (Wallet|Actions), ActionsActivity with Passport Scan; integrate nav in Main/MRZ/Wallet; register activity; update strings/layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,12 @@
             android:name=".wallet.WalletActivity"
             android:exported="false"
             android:theme="@style/Theme.PassportScanner" />
+
+        <!-- Actions Navigator Activity -->
+        <activity
+            android:name=".ActionsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner" />
     </application>
 
 </manifest>
