checkpoint after wallet and navigation changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         tools:targetApi="31">
         
         <activity
-            android:name=".MRZInputActivity"
+            android:name=".HostActivity"
             android:exported="true"
             android:theme="@style/Theme.PassportScanner">
             <intent-filter>
@@ -37,6 +37,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MRZInputActivity"
+            android:exported="true"
+            android:theme="@style/Theme.PassportScanner" />
         
         <activity
             android:name=".MainActivity"
