feat(ui): add anml claim flow and host navigation
Add ANML Claim UI entry and navigation so the ANML screen can be
opened within the shared HostActivity bottom navigation. Registered
ANMLClaimActivity in the manifest and added the ANML button to the
Actions activity layout. Wire-ups:
- ActionsActivity: button routes to HostActivity with "fragment_to_show"="anml"
  (shows toast/log for UX).
- ActionsFragment: attempts to ask HostActivity to show the "anml" fragment;
  falls back to launching ANMLClaimActivity if HostActivity isn't present and
  handles errors with logs/toasts.
- HostActivity.showFragment made public and now handles the "anml" tag by
  instantiating ANMLClaimFragment and selecting the Actions nav item.

This keeps the bottom navigation single-sourced and reuses the HostActivity
for consistent UX.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,12 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner" />
 
+        <!-- ANML Claim Activity -->
+        <activity
+            android:name=".ANMLClaimActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner" />
+
         <!-- Actions Navigator Activity -->
         <activity
             android:name=".ActionsActivity"
