feat(ui): replace progress indicators with loading gifs
Replace multiple ProgressBar/text status indicators with ImageView-based
animated loading GIFs and wire them up using Glide. Add Glide dependency
and annotation processor to the app build.gradle. Update MainActivity,
ANMLClaimActivity, ANMLClaimFragment and corresponding layouts to load
a drawable GIF via Glide and hide/show the ImageView instead of using
ProgressBar/status TextView. Simplify loading UI flow and remove some
redundant status TextViews.

Also remove the passport scan button from Actions layouts and related
handlers/Toasts, and make HostActivity.showFragment public so fragments
can request navigation through the host.

BREAKING CHANGE: progress indicators changed — ProgressBar/status_text
views were replaced with ImageView loading GIFs (ids/layouts modified:
anml_progress/status_text removed, anml_loading_gif added, progress_bar
type changed). Update any code or tests that referenced the old views.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     
     // For handling images in passport
     implementation 'com.github.mhshams:jnbis:1.1.0'
+    // GIF rendering (Glide)
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
