feat(wallet): add create wallet flow and secure mnemonic access
Add CreateWalletActivity to the manifest and wire WalletActivity and
WalletFragment to launch the Keplr-style create/import flow instead of
handling mnemonic creation/editing inline. Remove the mnemonic input,
save button, and editable LCD URL from the main wallet UI; mnemonic is
now sourced from securePrefs and can be revealed only after PIN
verification. Update SecretWallet.DEFAULT_LCD_URL to the project default
(https://lcd.erth.network) and force the app to use that endpoint.

Also update UI behavior: use wallet_name to label the generate button,
derive and display address on resume/after creation, restructure the
address/balance layout with compact action buttons, and avoid logging or
persisting mnemonics in the UI for improved privacy and security.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,13 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner"
             android:screenOrientation="portrait" />
+        
+        <!-- Create Wallet Activity (Keplr-style flow) -->
+        <activity
+            android:name=".wallet.CreateWalletActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner"
+            android:screenOrientation="portrait" />
 
         <!-- ANML Claim Activity -->
         <activity
