feat(wallet): add multi-wallet support and wallet list UI
Introduce multi-wallet storage and management using a wallets JSON array
stored in secure preferences and a selected_wallet_index. Add a dedicated
WalletListActivity/Fragment and integrate it with HostActivity so the
wallet management UI can be shown without losing bottom navigation.

Update wallet creation and access flows:
- CreateWalletActivity now appends new wallets to the wallets array,
  reuses an existing global PIN when present, and stores selected index
  and top-level wallet_name for compatibility.
- CreateWalletActivity hashes and stores a global PIN if none exists.
- WalletActivity and WalletFragment are refactored to read from the
  wallets array (with a fallback to legacy top-level mnemonic/wallet_name)
  and to defer add/show-mnemonic operations to the WalletList UI.
- ANMLClaimActivity now prefers the selected wallet mnemonic from the
  wallets array and falls back to legacy mnemonic storage.

UI and resource updates:
- activity_wallet layout simplified: remove inline add/show mnemonic UI,
  add current_wallet_arrow trigger, adjust title and wallet name styling.
- add wallet row colors and rename branding strings (app_name and
  wallet_title => Earth Wallet).
- AndroidManifest declares WalletListActivity.

These changes enable multiple wallets per user while preserving backward
compatibility with the previous single-mnemonic storage.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,13 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner"
             android:screenOrientation="portrait" />
+        
+        <!-- Wallet list activity (manage multiple wallets) -->
+        <activity
+            android:name=".wallet.WalletListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner"
+            android:screenOrientation="portrait" />
 
         <!-- ANML Claim Activity -->
         <activity
