feat(api): use SecretJS bridge for ANML claim status query
- Add headless SecretQueryActivity and SecretSignerActivity to
  AndroidManifest
- Replace proxy-based AsyncTask in ANMLClaimActivity with on-device
  WebView bridge (SecretQueryActivity) and handle results via
  startActivityForResult
- Remove PROXY_URL and HttpURLConnection usage; improve error and UI
  handling

Why: removes dependency on external proxy and keeps contract queries on
device for better privacy and reliability. Sets up signer activity for
future on-device signing.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,20 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner"
             android:screenOrientation="portrait" />
+        
+        <!-- Secret Query Activity (headless, invisible WebView) -->
+        <activity
+            android:name=".bridge.SecretQueryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner"
+            android:excludeFromRecents="true" />
+        
+        <!-- Secret Signer Activity (headless, on-device signing) -->
+        <activity
+            android:name=".bridge.SecretSignerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner"
+            android:excludeFromRecents="true" />
     </application>
 
 </manifest>
