feat(bridge): add SecretJS execute bridge and ANML claim flow
- Introduce SecretExecuteActivity (headless, NoDisplay) for signing and
  broadcasting executes via WebView/SecretJS
- Extend secret_bridge.html with runExecute (Wallet signer, fixed LCD,
  optional funds/memo) and Android callbacks for result/error
- Wire up claim buttons in ANMLClaimActivity/Fragment to invoke execute
  and refresh status; add lightweight in-app debug dialogs
- Make SecretQueryActivity headless, enable WebView debugging/DOM
  storage, console logging, and surface load errors
- Add Theme.PassportScanner.NoDisplay style for invisible activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
         <activity
             android:name=".bridge.SecretQueryActivity"
             android:exported="false"
-            android:theme="@style/Theme.PassportScanner"
+            android:theme="@style/Theme.PassportScanner.NoDisplay"
             android:excludeFromRecents="true" />
         
         <!-- Secret Signer Activity (headless, on-device signing) -->
@@ -107,6 +107,13 @@
             android:name=".bridge.SecretSignerActivity"
             android:exported="false"
             android:theme="@style/Theme.PassportScanner"
+            android:excludeFromRecents="true" />
+        
+        <!-- Secret Execute Activity (headless, invisible WebView signer) -->
+        <activity
+            android:name=".bridge.SecretExecuteActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner.NoDisplay"
             android:excludeFromRecents="true" />
     </application>
 
