feat(bridge): add native execute flow for ANML claim
- Register headless SecretExecuteNativeActivity in manifest
- Add "Claim (Native)" action in ANMLClaimActivity/Fragment
- Pass contract address, code hash, execute JSON, optional LCD,
  funds, memo, and contract encryption key (Base64)
- Handle native result/txhash and refresh claim status
- Add request codes and clear button tint where needed
- Update layouts to include new "Claim (Native)" button
- Remove unused SecretExecuteNative stub

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,13 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner.NoDisplay"
             android:excludeFromRecents="true" />
+
+        <!-- Secret Execute Native Activity (headless, pure-native signer/broadcaster) -->
+        <activity
+            android:name=".bridge.SecretExecuteNativeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner.NoDisplay"
+            android:excludeFromRecents="true" />
     </application>
 
 </manifest>
