--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.0'
+        // Protobuf Gradle plugin for generating Java classes from .proto files
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
     }
 }
 
