refactor(bridge): extract service classes and improve encryption diagnostics
Extract SecretNetworkService and SecretCryptoService classes from SecretExecuteNativeActivity to improve code organization and maintainability. Add comprehensive AES-GCM encryption diagnostics with fallback to AES-SIV when encryption fails. Enhance protobuf transaction generation with detailed logging for signature verification debugging. Update unit tests to include production encryption method testing and complete SignDoc structure analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,5 @@ lint-results.*
 # Android build outputs often placed under module dirs; already covered by **/build/
 # Ignore example app folder
 erth-network-app/
+scripts/
 # End
