--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,13 @@
             android:exported="false"
             android:theme="@style/Theme.PassportScanner.NoDisplay"
             android:excludeFromRecents="true" />
+
+        <!-- Secret Execute Native Activity Refactored (streamlined version) -->
+        <activity
+            android:name=".bridge.SecretExecuteNativeActivityRefactored"
+            android:exported="false"
+            android:theme="@style/Theme.PassportScanner.NoDisplay"
+            android:excludeFromRecents="true" />
     </application>
 
 </manifest>
