refactor: rename project from PassportScanner to EarthWallet
- Update package name from com.example.passportscanner to com.example.earthwallet
- Rename application theme from Theme.PassportScanner to Theme.EarthWallet
- Update AndroidManifest.xml activity references to new package structure
- Remove legacy activities and move to new ui.activities package structure
- Clean up unused bridge and wallet components
- Consolidate activity organization under earthwallet namespace

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.passportscanner'
+    namespace 'com.example.earthwallet'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.passportscanner"
+        applicationId "com.example.earthwallet"
         minSdk 23
         targetSdk 34
         versionCode 1
