refactor(bridge): replace webview-based queries with native implementation
Remove secret_bridge.html and WebView dependency from SecretQueryActivity.
Implement pure Java/Android networking and crypto for Secret Network queries.
Add native response decryption to SecretCryptoService using AES-SIV.
Update navigation to use HostActivity fragment routing instead of direct intents.
Remove debug alerts from ANML claim operations.

- Eliminates WebView security and performance overhead
- Reduces memory usage and improves query execution speed
- Adds secretjs-source/ to gitignore for build artifacts
- Maintains full compatibility with existing query API

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,13 +55,12 @@
 
 
         
-        <!-- Secret Query Activity (headless, invisible WebView) -->
+        <!-- Secret Query Activity (headless, native queries without webview) -->
         <activity
             android:name=".bridge.activities.SecretQueryActivity"
             android:exported="false"
             android:theme="@style/Theme.EarthWallet.NoDisplay"
             android:excludeFromRecents="true" />
-        
         
         <!-- Secret Execute Activity (headless, pure-native execution) -->
         <activity
