--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.security:security-crypto:1.0.0'
+    
+    // Vector Drawable Support
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    
+    // Remove these - not needed for icons
     implementation('org.bitcoinj:bitcoinj-core:0.16.3') { exclude group: 'org.bouncycastle' }
     
     // JMRTD library for reading ePassports
