--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,13 @@
             android:exported="false"
             android:theme="@style/Theme.EarthWallet.NoDisplay"
             android:excludeFromRecents="true" />
+        
+        <!-- SNIP Query Activity (headless, specialized SNIP-20/SNIP-721 queries) -->
+        <activity
+            android:name=".bridge.activities.SnipQueryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EarthWallet.NoDisplay"
+            android:excludeFromRecents="true" />
 
 
     </application>
