feat(swap): integrate SnipExecuteActivity for SNIP-20 token swaps
Replace direct contract execution with SNIP-20 send message pattern for token swaps. Add SnipExecuteActivity to AndroidManifest and update SwapTokensMainFragment to use SNIP send messages with embedded swap instructions, matching React web app implementation. Improve transaction result handling with proper success detection based on transaction codes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,13 @@
             android:exported="false"
             android:theme="@style/Theme.EarthWallet.NoDisplay"
             android:excludeFromRecents="true" />
+        
+        <!-- SNIP Execute Activity (headless, specialized SNIP-20/SNIP-721 executions using send message) -->
+        <activity
+            android:name=".bridge.activities.SnipExecuteActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EarthWallet.NoDisplay"
+            android:excludeFromRecents="true" />
 
 
     </application>
