--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         tools:targetApi="31">
         
         <activity
-            android:name=".ui.activities.HostActivity"
+            android:name=".ui.host.HostActivity"
             android:exported="true"
             android:theme="@style/Theme.EarthWallet"
             android:screenOrientation="portrait">
