--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,12 +73,15 @@ protobuf {
 }
 
  
-// Dependency resolution to avoid BouncyCastle duplicates
+// Dependency resolution to avoid BouncyCastle and Kotlin duplicates
 configurations.all {
     exclude group: 'org.bouncycastle', module: 'bcprov-jdk15to18'
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     resolutionStrategy {
         force 'org.bouncycastle:bcprov-jdk15on:1.70'
         force 'org.bouncycastle:bcpkix-jdk15on:1.70'
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
     }
 }
 
@@ -112,6 +115,14 @@ dependencies {
     // GIF rendering (Glide)
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    
+    // ML Kit Text Recognition for camera-based MRZ scanning
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
+    // CameraX for camera functionality
+    implementation 'androidx.camera:camera-core:1.3.0'
+    implementation 'androidx.camera:camera-camera2:1.3.0'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0'
+    implementation 'androidx.camera:camera-view:1.3.0'
     
     // Protobuf dependencies for Cosmos SDK transaction encoding (lite version for Android)
     implementation 'com.google.protobuf:protobuf-javalite:3.21.12'
