--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,12 @@
             android:theme="@style/Theme.EarthWallet.NoDisplay"
             android:excludeFromRecents="true" />
 
+        <!-- Multi-Message Execute Activity (headless, multi-message transactions like add liquidity) -->
+        <activity
+            android:name="com.example.earthwallet.bridge.activities.MultiMessageExecuteActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EarthWallet.NoDisplay"
+            android:excludeFromRecents="true" />
 
     </application>
 
