--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     
+    // QR Code generation
+    implementation 'com.google.zxing:core:3.5.2'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    
     // ML Kit Text Recognition for camera-based MRZ scanning
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
     // CameraX for camera functionality
