feat(bridge): add native send activity and update viewing key prefix
- Add NativeSendActivity for headless native SCRT token transfers
- Change viewing key prefix from "api_key_" to "vk_" for consistency
- Update UI hint text to reflect new viewing key format

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,13 @@
             android:theme="@style/Theme.EarthWallet.NoDisplay"
             android:excludeFromRecents="true" />
 
+        <!-- Native Send Activity (headless, native SCRT token transfers) -->
+        <activity
+            android:name=".bridge.activities.NativeSendActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EarthWallet.NoDisplay"
+            android:excludeFromRecents="true" />
+
         <!-- Multi-Message Execute Activity (headless, multi-message transactions like add liquidity) -->
         <activity
             android:name="com.example.earthwallet.bridge.activities.MultiMessageExecuteActivity"
