--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     // Vector Drawable Support
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     
+    // Using Material Design filled icons only (no outlined/grey ones)
+    
     // Remove these - not needed for icons
     implementation('org.bitcoinj:bitcoinj-core:0.16.3') { exclude group: 'org.bouncycastle' }
     
