--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,9 @@ dependencies {
     implementation 'com.google.zxing:core:3.5.2'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     
+    // Google AdMob for advertisements
+    implementation 'com.google.android.gms:play-services-ads:22.6.0'
+    
     // ML Kit Text Recognition for camera-based MRZ scanning
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
     // CameraX for camera functionality
