--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         
+        <!-- AdMob App ID (test ID for development) -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
+        
         <activity
             android:name=".ui.host.HostActivity"
             android:exported="true"
