refactor(bridge): migrate from viewing keys to SNIP-24 permits system
Replace deprecated viewing key management with modern SNIP-24 permit-based authentication for SNIP-20 token queries. This migration improves security and aligns with current Secret Network standards.

- Add Gson dependency for permit JSON serialization
- Remove ViewingKeyManager and replace with PermitManager throughout codebase
- Add permit signing transaction type and service integration
- Update SnipQueryService to use permit-based balance queries with corrected SNIP-24 structure
- Remove ManageViewingKeysFragment and related UI components
- Update all token balance queries to use permits instead of viewing keys
- Clean up unused reference scripts and layout files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,11 +136,14 @@ dependencies {
     // Protobuf dependencies for Cosmos SDK transaction encoding (lite version for Android)
     implementation 'com.google.protobuf:protobuf-javalite:3.21.12'
     
+    // JSON serialization for permits
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     // CRITICAL CRYPTO DEPENDENCIES FOR SECRETJS COMPATIBILITY
     // x25519 ECDH support (required for SecretJS encryption compatibility)
     implementation 'org.whispersystems:curve25519-java:0.5.0'
-    
-    
+
+
     // RFC 5297 AES-SIV implementation (matches SecretJS miscreant library)
     implementation 'org.cryptomator:siv-mode:1.4.0'
     
