refactor(android): migrate from Java to Kotlin and upgrade dependencies
- Add Kotlin support with plugins and dependencies
- Upgrade Java compatibility from version 8 to 17
- Update Android dependencies to latest versions
- Remove Java utility classes (Constants, SecretNetworkService, LoadingOverlay, Bech32, WalletCrypto, WalletNetwork)
- Update service classes to use static Kotlin methods from SecretNetworkService
- Clean up dependency resolution strategy by removing Kotlin stdlib exclusions
- Add Kotlin coroutines and Android KTX libraries for modern development

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
     id 'com.google.protobuf' // Protobuf generation plugin
 }
 
@@ -24,8 +26,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+        freeCompilerArgs += [
+            "-opt-in=kotlin.RequiresOptIn"
+        ]
     }
     
     lint {
@@ -73,23 +82,30 @@ protobuf {
 }
 
  
-// Dependency resolution to avoid BouncyCastle and Kotlin duplicates
+// Dependency resolution to avoid BouncyCastle duplicates
 configurations.all {
     exclude group: 'org.bouncycastle', module: 'bcprov-jdk15to18'
-    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
-    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
     resolutionStrategy {
         force 'org.bouncycastle:bcprov-jdk15on:1.70'
         force 'org.bouncycastle:bcpkix-jdk15on:1.70'
-        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
     }
 }
 
 dependencies {
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+
+    // Android
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.security:security-crypto:1.0.0'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha06'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation 'androidx.activity:activity-ktx:1.8.2'
     
     // Vector Drawable Support
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
