--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.0'
+        classpath 'com.android.tools.build:gradle:8.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // Protobuf Gradle plugin for generating Java classes from .proto files
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
     }
